Bug 357637 - "Defaults" button in Collection Fields window doesn't work
Summary: "Defaults" button in Collection Fields window doesn't work
Status: RESOLVED FIXED
Alias: None
Product: tellico
Classification: Applications
Component: general (other bugs)
Version First Reported In: HEAD
Platform: openSUSE Linux
: NOR minor
Target Milestone: ---
Assignee: Robby Stephenson
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2016-01-07 01:19 UTC by Sven Werlen
Modified: 2016-01-16 04:15 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 2.3.12
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Sven Werlen 2016-01-07 01:19:44 UTC
Steps to reproduce
1) Open any collection.
2) Click on "Fields" or choose "Collection Fields" from Collection menu
3) Click on "Defaults" button

Result: nothing happens
Expected result: popup message "Do you really want to revert the properties for ..."
Comment 1 Sven Werlen 2016-01-10 19:23:24 UTC
Review request created (bug fix):
https://git.reviewboard.kde.org/r/126656/
Comment 2 Robby Stephenson 2016-01-16 04:09:52 UTC
Git commit 9e6ca6b26d16916355e65fbd1cab95f4bd0a434a by Robby Stephenson.
Committed on 16/01/2016 at 04:07.
Pushed by rstephenson into branch 'master'.

Fix "Defaults" button in Collection Fields dialog

Patch from Sven Werlen. Signal was not connected to slot.
REVIEW: 126656

M  +2    -0    src/collectionfieldsdialog.cpp

http://commits.kde.org/tellico/9e6ca6b26d16916355e65fbd1cab95f4bd0a434a
Comment 3 Robby Stephenson 2016-01-16 04:15:43 UTC
Git commit cf5cade4524b0e0e1be922fb92d37c0478701374 by Robby Stephenson.
Committed on 16/01/2016 at 04:14.
Pushed by rstephenson into branch '2.3'.

Fix "Defaults" button in Collection Fields dialog

Patch from Sven Werlen. Signal was not connected to slot.
FIXED-IN: 2.3.12

M  +4    -0    ChangeLog
M  +2    -0    src/collectionfieldsdialog.cpp

http://commits.kde.org/tellico/cf5cade4524b0e0e1be922fb92d37c0478701374