Fix "Defaults" button in Collection Fields dialog

Patch from Sven Werlen. Signal was not connected to slot.

BUG: 357637
REVIEW: 126656